Typo-correction. Route refactoring. Code organizing
