# routes/web.php
@@ -45,144 +45,149 @@ Route::controller(RegisterController::class)->group(function () {
     Route::post('/register', 'register');
 });
 
-//Password Recovery
+// Password Recovery
 Route::controller(MailController::class)->group(function () {
-    Route::get('/recover-password', 'showRecoverPasswordForm')->name('recoverPasswordForm');
-    Route::post('/recover-password', 'sendRecoverPasswordEmail')->name('recoverPasswordAction');
-    Route::post('/reset-password-check', 'checkResetPassword')->name('resetPasswordCheck');
-    Route::get('/reset-password', 'showResetPasswordForm')->name('resetPasswordForm');
-    Route::post('/reset-password', 'resetPassword')->name('resetPasswordAction');
+    Route::get('/password/recover', 'showRecoverPasswordForm')->name('recoverPasswordForm');
+    Route::post('/password/recover', 'sendRecoverPasswordEmail')->name('recoverPasswordAction');
+    Route::post('/password/verification-code/check', 'checkResetPassword')->name('resetPasswordCheck');
+    Route::get('/password/reset', 'showResetPasswordForm')->name('resetPasswordForm');
+    Route::post('/password/reset', 'resetPassword')->name('resetPasswordAction');
 });
 
 // Main Dynamic Pages
-Route::get('/search', [SearchController::class, 'show'])->name('search');
-
-Route::get('/user-feed', [UserFollowingController::class, 'showUserFeed'])->name('userFeed');
-
-Route::get('/recent-news', [ArticlePageController::class, 'showRecentNews'])->name('showRecentNews');
-Route::get('/most-voted', [ArticlePageController::class, 'showMostVotedNews'])->name('showMostVotedNews');
-
-Route::get('/trending-tags', [TagController::class, 'showTrendingTags'])->name('showTrendingTags');
-Route::get('/tag/{name}', [TagController::class, 'showTag'])->name('showTag');
-Route::get('/topic/{name}', [TopicController::class, 'showTopic'])->name('showTopic');
-
-
-Route::prefix('following')->controller
-(UserFollowingController::class)->group(function () {
-    Route::get('/tags','showFollowingTags')->name('showFollowingTags');
-    Route::get('/topics','showFollowingTopics')->name('showFollowingTopics');
-    Route::get('/authors','showFollowingAuthors')->name('showFollowingAuthors');
-
-    Route::post('/user/follow','followUser')->name('followUserAction');
-    Route::post('/user/unfollow','unfollowUser')->name('unfollowUserAction');
+Route::controller(SearchController::class)->group(function () {
+    Route::get('/search', 'show')->name('search');
 });
 
-Route::get('/favourite-articles', [ArticlePageController::class, 'showFavouriteArticles'])->name('showFavouriteArticles');
+Route::controller(UserFollowingController::class)->group(function () {
+    // User feed
+    Route::get('/user-feed', 'showUserFeed')->name('userFeed');
+    Route::get('/following/tags', 'showFollowingTags')->name('showFollowingTags');
+    Route::get('/following/topics', 'showFollowingTopics')->name('showFollowingTopics');
+    Route::get('/following/authors', 'showFollowingAuthors')->name('showFollowingAuthors');
+});
+
+Route::controller(ArticlePageController::class)->group(function () {
+    Route::get('/recent-news', 'showRecentNews')->name('showRecentNews');
+    Route::get('/most-voted', 'showMostVotedNews')->name('showMostVotedNews');
+    Route::get('/favourite-articles', 'showFavouriteArticles')->name('showFavouriteArticles');
+});
+
+
+
+Route::controller(TagController::class)->group(function () {
+    Route::get('/trending-tags', 'showTrendingTags')->name('showTrendingTags');
+    Route::get('/tag/{name}', 'showTag')->name('showTag');
+    // Following
+    Route::post('/tag/{name}/follow', 'followTag')->name('followTag');
+    Route::post('/tag/{name}/unfollow', 'unfollowTag')->name('unfollowTag');
+});
+
+Route::controller(TopicController::class)->group(function () {
+    Route::get('/topic/{name}', 'showTopic')->name('showTopic');
+    // Following
+    Route::post('/topic/{topic}/follow', 'followTopic')->name('followTopic');
+    Route::post('/topic/{topic}/unfollow', 'unfollowTopic')->name('unfollowTopic');
+});
 
 // Profile
-Route::prefix('profile')->controller
-(ProfileController::class)->group(function () {
-    Route::get('/user/{username}', 'showProfile')->name('profile');
-    Route::get('/edit/{username}', 'showEdit')->name('editProfile');
-    Route::post('/edit/{username}', 'update')->name('updateProfile');
-    Route::post('/delete/{id}', 'delete')->name('deleteProfile');
-
-    Route::post('/appeal-unban/show', 'appealUnbanShow')->name('appealUnbanShow');
-    Route::post('/appeal-unban/submit', 'appealUnbanSubmit')->name('appealUnbanSubmit');
+Route::prefix('profile')->controller(ProfileController::class)->group(function () {
+    Route::get('/{username}', 'showProfile')->name('profile');
+    Route::get('/{username}/edit', 'showEdit')->name('editProfile');
+    Route::post('/{username}/edit', 'update')->name('updateProfile');
+    Route::post('/{id}/delete', 'delete')->name('deleteProfile');
+    // Following users
+    Route::post('/user/follow', 'followUser')->name('followUserAction');
+    Route::post('/user/unfollow', 'unfollowUser')->name('unfollowUserAction');
+    // Appeals
+    Route::post('/appeal-unban', 'appealUnbanShow')->name('appealUnbanShow');
+    Route::post('/appeal-unban', 'appealUnbanSubmit')->name('appealUnbanSubmit');
 });
 
-Route::get('/notifications', [NotificationsController::class, 'showNotificationsPage'])->name('notifications.show.page');
-Route::get('/notifications/new/all', [NotificationsController::class, 'newNotifications'])->name('notifications.show.newNotificationsAll');
-Route::get('/notifications/archived/all', [NotificationsController::class, 'archivedNotifications'])->name('notifications.show.archivedNotificationsAll');
+// Notifications
+Route::prefix('notifications')->controller
+(NotificationsController::class)->group(function () {
+    Route::get('/', 'showNotificationsPage')->name('showNotificationsPage');
+    Route::get('/new/all', 'newNotifications')->name('showNewNotificationsAll');
+    Route::get('/new/upvotes', 'newNotificationsUpvotes')->name('showNewNotificationsUpvotes');
+    Route::get('/new/comments', 'newNotificationsComments')->name('showNewNotificationsComments');
+    Route::get('/archived/all', 'archivedNotifications')->name('showArchivedNotificationsAll');
+    Route::get('/archived/upvotes', 'archivedNotificationsUpvotes')->name('showArchivedNotificationsUpvotes');
+    Route::get('/archived/comments', 'archivedNotificationsComments')->name('showArchivedNotificationsComments');
 
-Route::get('/notifications/new/upvotes', [NotificationsController::class, 'newNotificationsUpvotes'])->name('notifications.show.newNotificationsUpvotes');
-Route::get('/notifications/new/comments', [NotificationsController::class, 'newNotificationsComments'])->name('notifications.show.newNotificationsComments');
-
-Route::get('/notifications/archived/upvotes', [NotificationsController::class, 'archivedNotificationsUpvotes'])->name('notifications.show.archivedNotificationsUpvotes');
-Route::get('/notifications/archived/comments', [NotificationsController::class, 'archivedNotificationsComments'])->name('notifications.show.archivedNotificationsComments');
-
-Route::get('/notifications/archiving/{id}', [NotificationsController::class, 'archivingNotification'])->name('notifications.archiving');
+    Route::get('/{id}/archive', 'archivingNotification')->name('archiveNotification');
+});
 
 // Administrator Panel
 Route::prefix('admin-panel')->controller
 (AdminPanelController::class)->group(function () {
     Route::get('/', 'show')->name('adminPanel');
     // User management
-    Route::get('/more-users', 'moreUsers')->name('moreUsers');
-    Route::post('/create-user', 'createFullUser')->name('adminCreateUser');
-    Route::post('/ban-user/{id}', 'banUser')->name('adminBanUser');
-    Route::post('/unban-user/{id}', 'unbanUser')->name('adminUnbanUser');
+    Route::get('/users', 'moreUsers')->name('moreUsers');
+    Route::post('/users/create', 'createFullUser')->name('adminCreateUser');
+    Route::post('/users/{id}/ban', 'banUser')->name('adminBanUser');
+    Route::post('/users/{id}/unban', 'unbanUser')->name('adminUnbanUser');
     // Topic management
-    Route::get('/more-topics', 'moreTopics')->name('moreTopics');
-    Route::post('/create-topic', 'createTopic')->name('adminCreateTopic');
+    Route::get('/topics', 'moreTopics')->name('moreTopics');
+    Route::post('/topics/create', 'createTopic')->name('adminCreateTopic');
     // Tag management
-    Route::get('/more-tags', 'moreTags')->name('moreTags');
-    Route::post('/create-tag', 'createTag')->name('createTag');
-    Route::post('/toggle-trending-tag/{id}', 'toggleTrending')->name('toggleTrendingTag');
+    Route::get('/tags', 'moreTags')->name('moreTags');
+    Route::post('/tags/create', 'createTag')->name('createTag');
+    Route::post('/tags/trending/{id}/toggle', 'toggleTrending')->name('toggleTrendingTag');
     // Tag proposal management
-    Route::get('/more-tag-proposals', 'moreTagProposals')->name('moreTagProposals');
-    Route::post('/accept-tag-proposal/{id}', 'acceptTagProposal')->name('acceptTagProposal');
-    Route::post('/reject-tag-proposal/{id}', 'rejectTagProposal')->name('rejectTagProposal');
+    Route::get('/tag-proposals', 'moreTagProposals')->name('moreTagProposals');
+    Route::post('/tag-proposals/{id}/accept', 'acceptTagProposal')->name('acceptTagProposal');
+    Route::post('/tag-proposals/{id}/reject', 'rejectTagProposal')->name('rejectTagProposal');
     // Unban appeal management
-    Route::get('/more-unban-appeals', 'moreUnbanAppeals')->name('moreUnbanAppeals');
-    Route::post('/accept-unban-appeal/{id}', 'acceptUnbanAppeal')->name('acceptUnbanAppeal');
-    Route::post('/reject-unban-appeal/{id}', 'rejectUnbanAppeal')->name('rejectUnbanAppeal');
+    Route::get('/unban-appeals', 'moreUnbanAppeals')->name('moreUnbanAppeals');
+    Route::post('/unban-appeals/{id}/accept', 'acceptUnbanAppeal')->name('acceptUnbanAppeal');
+    Route::post('/unban-appeals/{id}/reject', 'rejectUnbanAppeal')->name('rejectUnbanAppeal');
 });
 
 // Article
 Route::prefix('article/{id}')->controller
 (ArticlePageController::class)->group(function () {
     Route::get('/', 'show')->name('showArticle');
-    Route::post('/upvote-article', 'upvoteArticle')->name('upvoteArticle');
-    Route::post('/downvote-article', 'downvoteArticle')->name('downvoteArticle');
-    Route::post('/favourite-article', 'favourite')->name('favouriteArticle');
-    Route::post('/write-comment', 'writeComment')->name('writeComment');
+    Route::post('/upvote', 'upvoteArticle')->name('upvoteArticle');
+    Route::post('/downvote', 'downvoteArticle')->name('downvoteArticle');
+    Route::post('/favourite', 'favourite')->name('favouriteArticle');
+    Route::post('/comment/write', 'writeComment')->name('writeComment');
 });
 
 Route::controller(CreateArticleController::class)->group(function () {
-    Route::get('/create-article', 'create')->name('createArticle');
-    Route::post('/create-article', 'store')->name('submitArticle');
-    Route::get('/edit-article/{id}', 'edit')->name('editArticle');
-    Route::post('/edit-article/{id}', 'update')->name('updateArticle');
-    Route::post('/delete-article/{id}', 'delete')->name('deleteArticle');
+    Route::get('/article/create', 'create')->name('createArticle');
+    Route::post('/article/create', 'store')->name('submitArticle');
+    Route::get('/article/{id}/edit', 'edit')->name('editArticle');
+    Route::post('/article/{id}/edit', 'update')->name('updateArticle');
+    Route::post('/article/{id}/delete', 'delete')->name('deleteArticle');
 
-    Route::post('porpose-tag/show', 'porposeNewTagShow')->name('showProposeTag');
-    Route::post('/propose-tag/submit', 'porposeNewTag')->name('proposeTagSubmit');
+    Route::post('article/create/tag/propose', 'proposeNewTagShow')->name('showProposeTag');
+    Route::post('/article/create/tag/propose', 'proposeNewTag')->name('proposeTagSubmit');
 });
 
-Route::post('/comment/{id}/upvote-comment', [ArticlePageController::class, 'upvoteComment'])->name('upvoteComment');
-Route::post('/comment/{id}/downvote-comment', [ArticlePageController::class, 'downvoteComment'])->name('downvoteComment');
-Route::post('/comment/{id}/delete-comment', [ArticlePageController::class, 'deleteComment'])->name('deleteComment');
-Route::post('/comment/{id}/edit-comment', [ArticlePageController::class, 'editComment'])->name('editComment');
+// Article Comments
+Route::controller(ArticlePageController::class)->group(function () {
+    Route::post('/comment/{id}/upvote', 'upvoteComment')->name('upvoteComment');
+    Route::post('/comment/{id}/downvote', 'downvoteComment')->name('downvoteComment');
+    Route::post('/comment/{id}/delete', 'deleteComment')->name('deleteComment');
+    Route::post('/comment/{id}/edit', 'editComment')->name('editComment');
 
-Route::post('/comment/{id}/commentForm', [ArticlePageController::class, 'showCommentForm'])->name('showCommentForm');
-Route::post('/comment/{id}/reply', [ArticlePageController::class, 'replyComment'])->name('replyComment');
+    Route::post('/comment/{id}/form', 'showCommentForm')->name('showCommentForm');
+    Route::post('/comment/{id}/reply', 'replyComment')->name('replyComment');
 
-Route::post('/reply/{id}/upvote-reply', [ArticlePageController::class, 'upvoteReply'])->name('upvoteReply');
-Route::post('/reply/{id}/downvote-reply', [ArticlePageController::class, 'downvoteReply'])->name('downvoteReply');
-Route::post('/reply/{id}/delete-reply', [ArticlePageController::class, 'deleteReply'])->name('deleteReply');
+    Route::post('/reply/{id}/upvote', 'upvoteReply')->name('upvoteReply');
+    Route::post('/reply/{id}/downvote', 'downvoteReply')->name('downvoteReply');
+    Route::post('/reply/{id}/delete', 'deleteReply')->name('deleteReply');
 
-Route::post('/report-article-modal/{id}', [ArticlePageController::class, 'showReportArticleModal'])->name('showReportArticleModal');
-Route::post('/report-comment-modal/{id}', [ArticlePageController::class, 'showReportCommentModal'])->name('showReportCommentModal');
-Route::post('/report-user-modal/{id}', [ArticlePageController::class, 'showReportUserModal'])->name('showReportUserModal');
-
-
-Route::post('/report-article-submit/{id}', [ArticlePageController::class, 'reportArticleSubmit'])->name('reportArticleSubmit');
-Route::post('/report-comment-submit/{id}', [ArticlePageController::class, 'reportCommentSubmit'])->name('reportCommentSubmit');
-Route::post('/report-user-submit/{id}', [ArticlePageController::class, 'reportUserSubmit'])->name('reportUserSubmit');
-
-
-// Tag
-Route::post('/tag/{name}/follow', [TagController::class, 'followTag'])->name('followTag');
-Route::post('/tag/{name}/unfollow', [TagController::class, 'unfollowTag'])->name('unfollowTag');
-
-// Topic
-Route::post('/topic/{topic}/follow', [TopicController::class, 'followTopic'])->name('followTopic');
-Route::post('/topic/{topic}/unfollow', [TopicController::class, 'unfollowTopic'])->name('unfollowTopic');
+    Route::post('/article/{id}/report-modal', 'showReportArticleModal')->name('showReportArticleModal');
+    Route::post('/comment/{id}/report-modal', 'showReportCommentModal')->name('showReportCommentModal');
+    Route::post('/user/{id}/report-modal', 'showReportUserModal')->name('showReportUserModal');
+    Route::post('/article/{id}/report', 'reportArticleSubmit')->name('reportArticleSubmit');
+    Route::post('/comment/{id}/report', 'reportCommentSubmit')->name('reportCommentSubmit');
+    Route::post('/user/{id}/report', 'reportUserSubmit')->name('reportUserSubmit');
+});
 
 // Static Pages
 Route::get('/features', [FeaturesController::class, 'show'])->name('features');
 Route::get('/contacts', [ContactsController::class, 'show'])->name('contacts');
 Route::get('/about-us', [AboutUsController::class, 'show'])->name('aboutUs');
-
-
